fix: try to fix 100vh on mobile, #118

--- a/client/assets/style/global.styl
+++ b/client/assets/style/global.styl
@@ -1,5 +1,10 @@
-body, html, #app, #__nuxt, #__layout
+body, html, #app, #__nuxt, #__layout, .v-dialog--fullscreen
   height 100%
+  position fixed
+  top 0
+  left 0
+  right 0
+  bottom 0
   overflow hidden !important
 
 ::-webkit-scrollbar
